--- a/src/templates/components/home/URLDeck/URLDeck.html
+++ b/src/templates/components/home/URLDeck/URLDeck.html
@@ -1,5 +1,5 @@
 <div id="URLDeck" class="deck h-100 flex-column align-stretch">
-	<div class="flex-column" id="URLDeckHeaderWrap">
+	<div class="flex-column m-bot-0p25rem" id="URLDeckHeaderWrap">
 		<!-- Header -->
 		{% include 'components/home/URLDeck/URLDeckHeader.html' %}
 
