--- a/src/templates/components/home/URLDeck/URLDeckSubheader.html
+++ b/src/templates/components/home/URLDeck/URLDeckSubheader.html
@@ -1,8 +1,8 @@
-<div class="titleElement pad-in-15p dynamic-subheader height-2p5rem">
-	<div class="flex-row align-center" id="UTubDescriptionSubheaderWrap">
+<div id="UTubDescriptionSubheaderOuterWrap" class="titleElement pad-in-15p dynamic-subheader flex-start align-center">
+	<div class="flex-row align-center flex-start" id="UTubDescriptionSubheaderWrap">
 		<h5 id="URLDeckSubheader">{{CONSTANTS.STRINGS.UTUB_SELECT}}</h5>
 		<!-- Update UTub description button -->
-		<button id="updateUTubDescriptionBtn" class="mx-1 hiddenBtn">
+		<button id="updateUTubDescriptionBtn" class="mx-1" tabindex="0">
 			<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
 				class="bi bi-pencil-square updateIcon" viewBox="0 0 16 16">
 				<path
