--- a/src/templates/pages/layout.html
+++ b/src/templates/pages/layout.html
@@ -45,6 +45,7 @@
     {% endblock %}
 
     {% block footer %}
+    {% include 'components/cookieBanner.html' %}
     {% include 'components/footer.html' %}
     {% endblock %}
 
