--- a/src/templates/components/home/URLDeck/URLDeckHeader.html
+++ b/src/templates/components/home/URLDeck/URLDeckHeader.html
@@ -1,11 +1,11 @@
-<div class="titleElement pad-in-15p jc-sb">
+<div class="flex-row align-center pad-in-15p jc-sb">
 
 	<div class="flex-row align-center" id="UTubNameOuterUpdateWrap">
 		<!-- Header -->
 		<div class="flex-row align-center" id="UTubNameUpdateWrap">
 			<h2 id="URLDeckHeader">URLs</h2>
 			<!-- Show Update UTub name button -->
-			<button id="utubNameBtnUpdate" class="mx-1 hidden">
+			<button id="utubNameBtnUpdate" class="mx-1" tabindex="0">
 				<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
 					class="bi bi-pencil-square updateIcon" viewBox="0 0 16 16">
 					<path
