--- a/src/templates/components/home/URLDeck/UpdateUTubNameForm.html
+++ b/src/templates/components/home/URLDeck/UpdateUTubNameForm.html
@@ -1,26 +1,26 @@
 <div class="createDiv flex-row full-width pad-top-5p hidden">
 	<div class="text-input-container full-width">
-		<div class="text-input-inner-container">
+		<div class="text-input-inner-container flex-row align-center">
 			<input class="text-input" type="text" id="utubNameUpdate" name="utubName" minlength={{CONSTANTS.UTUBS.MIN_NAME_LENGTH}} maxlength={{CONSTANTS.UTUBS.MAX_NAME_LENGTH}} required>
 			<label class="text-input-label" for="utubName">UTub Name</label>
+			<!-- Submit update UTub name -->
+			<button id="utubNameSubmitBtnUpdate" class="green-clickable mx-1 my-2" tabindex="0">
+				<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+					class="bi bi-check-square-fill" viewBox="0 0 16 16">
+					<path
+						d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm10.03 4.97a.75.75 0 0 1 .011 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.75.75 0 0 1 1.08-.022z" />
+				</svg>
+			</button>
+
+			<!-- Cancel update UTub name -->
+			<button class="mx-1 my-2" id="utubNameCancelBtnUpdate" tabindex="0" >
+				<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-x-square-fill cancelButton" viewBox="0 0 16 16" width="30" height="30">
+					<path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm3.354 4.646L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 1 1 .708-.708">
+					</path>
+				</svg>
+			</button>
 		</div>
 		<span class="text-input-error-message" id="utubNameUpdate-error">This field is required.</span>
 	</div>
 
-	<!-- Submit update UTub name -->
-	<button id="utubNameSubmitBtnUpdate" class="green-clickable mx-1 my-2">
-		<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-			class="bi bi-check-square-fill submitButton" tabindex="0" viewBox="0 0 16 16">
-			<path
-				d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm10.03 4.97a.75.75 0 0 1 .011 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.75.75 0 0 1 1.08-.022z" />
-		</svg>
-	</button>
-
-	<!-- Cancel update UTub name -->
-	<button class="mx-1 my-2" id="utubNameCancelBtnUpdate">
-		<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-x-square-fill cancelButton" viewBox="0 0 16 16" width="30" height="30" tabindex="0">
-			<path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm3.354 4.646L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 1 1 .708-.708">
-			</path>
-		</svg>
-	</button>
 </div>
