--- a/src/templates/components/home/UTubDeck/UTubDeckHeaders.html
+++ b/src/templates/components/home/UTubDeck/UTubDeckHeaders.html
@@ -31,8 +31,8 @@
             </svg>
         </button>
         <!-- Create UTub button -->
-        <button id="utubBtnCreate" tabindex="0">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill green-clickable"
+        <button class="green-clickable" id="utubBtnCreate" tabindex="0">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill"
                 width="30" height="30" viewBox="0 0 16 16">
                 <path
                     d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0" />
