--- a/src/templates/components/head/bundles.html
+++ b/src/templates/components/head/bundles.html
@@ -30,15 +30,31 @@
   <!-- jQuery - v3.7.1 (CDN with fallback) -->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-      crossorigin="anonymous"
-      onerror="this.onerror=null; this.src='{{ vendor_base }}/jquery-3.7.1.min.js'">
+      crossorigin="anonymous">
   </script>
+  <script nonce="{{ nonce }}">
+    if (!window.jQuery) {
+      var s = document.createElement('script');
+      s.src = '{{ vendor_base }}/jquery-3.7.1.min.js';
+      document.head.appendChild(s);
+    }
+  </script>
+
+  <!-- Cloudflare Web Analytics -->
+  <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "ffa3bd384c394b42b5e10fe94886d679"}'></script>
+  <!-- End Cloudflare Web Analytics -->
 
   <!-- Bootstrap bundle with popper - v5.2.3 (CDN with fallback) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-      onerror="this.onerror=null; this.src='{{ vendor_base }}/bootstrap.bundle.min.js'">
+      crossorigin="anonymous">
+  </script>
+  <script nonce="{{ nonce }}">
+    if (!window.bootstrap) {
+      var s = document.createElement('script');
+      s.src = '{{ vendor_base }}/bootstrap.bundle.min.js';
+      document.head.appendChild(s);
+    }
   </script>
 
   <!-- CSS (CDN) -->
